# thingsIO

./: .gitignore  Dockerfile  README.md  deploy-cloud-dev.sh  deploy-local-dev.sh
analytics/: Dockerfile  analytics-deployment.yaml  analytics.py  analytics_handler.py  p100.json
dashboard/: Dockerfile  MANIFEST.in  README.md  __init__.py  auth.py  dash.py  dashboard-deployment.yaml  setup.cfg
dashboard/dashr/: __init__.py  auth.py  dash.py
dashboard/dashr/templates/dash/: analytics.html  analytics_full.html  dashboard.html
dashboard/dashr/tools/: accounts_handler.py  analytics_handler.py  influx_handler.py  schema_handler.py
dashboard/static/: signin.css
dashboard/templates/: dashboard.html
dashboard/templates/auth/: login.html  register.html
dashboard/templates/dash/: analytics.html  chartjs_test.html  dashboard.html  dashboard_base.html  sample.json  schema.html
dashboard/templates/dashboard/: dashboard_base.html  schema.html
dashboard/tools/: accounts_handler.py  analytics_handler.py  influx_handler.py  schema_handler.py
frontend/templates/: login.html  (+1 more)
influxdb/: influxdb-deployment.yaml  influxdb-service.yaml
ingestor/: Dockerfile  ingestor-deployment.yaml  ingestor_server.py  ingestor_server_cloud.py  ingestor_server_local.py
logs/: Dockerfile  logs-deployment.yaml  logs.py
rabbitmq/: rabbitmq-deployment.yaml
redis/: redis-deployment.yaml
rest/: Dockerfile  rest-deployment.yaml  rest-ingress.yaml  rest-service.yaml  rest_client.py  rest_server.py
test/: batch_sim.py  req_sim.py  schema.json  schema2.json  test.ipynb  uids.txt
(+7 files in other folders)
