[metadata]
name = dashr
version = 1.0.0
url = https://github.com/sanskarkatiyar/thingsIO
license = BSD-3-Clause
maintainer = Sanskar Katiyar, Siddhant Keshkar
maintainer_email = contact@palletsprojects.com
description = short desc placeholder
long_description = long desc placeholder

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[coverage:run]
branch = True
source =
    dashr